# MOSS-Transcribe-Diarize

./: README.md  README_zh.md  pyproject.toml
moss_transcribe_diarize/app/: jobs.py  server.py
moss_transcribe_diarize/app/static/: app.js  i18n.js  index.html  styles.css
moss_transcribe_diarize/app/static/locales/: en.json  zh-CN.json
moss_transcribe_diarize/subtitle/: __init__.py  export.py  layout.py
tests/: test_app_api.py  test_app_i18n.py  test_job_persistence.py  test_subtitle_export.py  test_subtitle_layout.py
