[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moss-transcribe-diarize"
version = "0.1.0"
description = "MOSS-Transcribe-Diarize inference code and Transformers remote-code model implementation"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "OpenMOSS Team" }]
dependencies = [
  "transformers>=5.0.0,<6.0.0",
  "safetensors>=0.6.2",
  "numpy>=1.26,<3",
  "av>=14.0",
  "librosa>=0.11.0",
  "numba>=0.61.0",
  "soundfile>=0.12",
  "soxr>=0.5",
  "packaging",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "python-multipart>=0.0.9",
]

[project.scripts]
mtd-subtitle = "moss_transcribe_diarize.app.cli:main"
mtd-subtitle-web = "moss_transcribe_diarize.app.web_cli:main"

[project.optional-dependencies]
torch-runtime = [
  "torch>=2.8",
  "torchaudio>=2.8",
]
flash-attn = ["flash-attn"]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["moss_transcribe_diarize*"]

[tool.setuptools.package-data]
"moss_transcribe_diarize.app" = ["static/*", "static/locales/*.json"]
